# brave-core

./: DEPS  package.json
app/: brave_command_ids.h  brave_generated_resources.grd
browser/: BUILD.gn  brave_profile_prefs.cc
browser/autoplay/: autoplay_permission_context.cc  autoplay_permission_context.h
browser/payments/: BUILD.gn  payments_service.h  payments_service_impl.cc  payments_service_impl.h  payments_service_observer.h
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_browser_command_controller.h  brave_pages.cc  brave_pages.h
browser/ui/toolbar/: brave_app_menu_model.cc
browser/ui/views/: brave_views_delegate.cc  brave_views_delegate.h
browser/ui/webui/: basic_ui.cc  brave_web_ui_controller_factory.cc
browser/ui/webui/sync/: i_sync_ui.h  isync_js_layer.h  sync_js_layer.cc  sync_js_layer.h  sync_ui.cc  sync_ui.h
chromium_src/chrome/browser/ui/views/: chrome_browser_main_extra_parts_views.cc
common/: webui_url_constants.cc  webui_url_constants.h
components/brave_sync/: BUILD.gn  brave_sync_controller.cc  brave_sync_controller.h  brave_sync_devices.cc  brave_sync_devices.h  brave_sync_jslib_const.cc  brave_sync_jslib_const.h  brave_sync_obj_map.cc  brave_sync_obj_map.h  brave_sync_pref_names.cc  brave_sync_pref_names.h  brave_sync_profile_prefs.cc  brave_sync_profile_prefs.h  brave_sync_settings.cc  brave_sync_settings.h  brave_sync_tools.cc  brave_sync_tools.h  value_debug.cc  values_conv.cc  values_conv.h
components/brave_sync_ui/: BUILD.gn  brave_sync.html  brave_sync.js  brave_sync_lib.html  brave_sync_lib.js
components/resources/: BUILD.gn  brave_components_resources.grd
components/sync/driver/: brave_sync_service_base.cc  brave_sync_service_base.h
components/webpack/: dev.config.js  prod.config.js
patches/: chrome-BUILD.gn.patch  chrome-browser-permissions-permission_manager.cc.patch  chrome-browser-permissions-permission_request_impl.cc.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-route.js.patch  chrome-browser-resources-settings-site_settings-site_details.html.patch  chrome-browser-resources-settings-site_settings_page-site_settings_page.html.patch  chrome-browser-ui-content_settings-content_setting_bubble_model.cc.patch  chrome-browser-ui-content_settings-content_setting_image_model.cc.patch  chrome-browser-ui-page_info-page_info_ui.cc.patch  chrome-browser-ui-toolbar-media_router_contextual_menu.cc.patch  chrome-browser-ui-webui-media_router-media_router_webui_message_handler.cc.patch  chrome-browser-ui-webui-settings-md_settings_localized_strings_provider.cc.patch  chrome-browser-ui-webui-settings-md_settings_ui.cc.patch  chrome-browser-ui-webui-settings-metrics_reporting_handler.cc.patch  chrome-browser-ui-webui-settings-metrics_reporting_handler.h.patch  chrome-common-chrome_paths_linux.cc.patch  components-browser_sync-profile_sync_service.cc.patch  components-browser_sync-profile_sync_service.h.patch  components-crash-content-app-crashpad_linux.cc.patch  components-crash-content-app-crashpad_mac.mm.patch  components-crash-content-app-crashpad_win.cc.patch  components-metrics-metrics_service_accessor.cc.patch  extensions-browser-api-web_request-web_request_permissions.cc.patch  third_party-blink-renderer-core-html-media-autoplay_policy.cc.patch  third_party-blink-renderer-core-html-media-autoplay_policy.h.patch
test/: BUILD.gn
test/data/: credentialspreventsilentaccess.html
vector_icons/components/vector_icons/: back_arrow.icon
